--- a/DaytaCare/DaytaCare.csproj
+++ b/DaytaCare/DaytaCare.csproj
@@ -20,4 +20,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Models\DTO\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\DTO\" />
+  </ItemGroup>
 </Project>
