changed jwt token

--- a/DaytaCare/appsettings.json
+++ b/DaytaCare/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "JWT": {
-    "Secret": "DaytaCare"
+    "Secret": "DaytaCareDaytaCareDaytaCareDaytaCareDaytaCare"
   }
 }
